# purchase-manager

./: .editorconfig  .env.example  Dockerfile  Makefile  README.md  aerich.ini  docker-compose.yml  pyproject.toml
app/: main.py  models.py  tasks.py
app/api/errors/: validaition_error.py
app/api/routes/: api.py  categories.py  users.py
app/core/: config.py  events.py  logging.py
app/db/migrations/models/: 0_20210714234503_init.sql  1_20210715230550_null_password_hash.sql  2_20210715234534_add_product_owner.sql
app/models/: categories.py  products.py  users.py
app/services/: tasks.py  utils.py
app/worker/: celery_app.py  celery_worker.py  tasks.py  worker.py
